# ModeloIA_Entrenamiento

./: .env  AgentesColaborativos.ipynb  Guion_presentacion_Agente_Olimpico_Inteligente.docx  README.md  Sistemas_agentes_colaborativos.ipynb  Untitled8.ipynb  agent.py  agente.py  app_gradio.py  gradio_app.py  inspect_db.py  main.py  process_data.py  rag.py  rag_tools.py  requirements.txt  scraper.py  scraping.py  subtitulador_de_video+resumen.ipynb  tools.py  vector_db.py
01_EntrenamientoModelo/: codigo corregido predicción.ipynb
02_Scraping/: README.md  agente.py  app_gradio.py  inspect_db.py  main.py  rag.py  requirements.txt  scraping.py  tools.py  vector_db.py
03_HuggingFace_Gradio/: HuggginFaceJuegosOlimpicos.ipynb  ModeloJuegosOlimpicos.ipynb  README.md  Untitled0.ipynb  subtitulador+resumen.ipynb  ultima_version_subtitulos (1).ipynb  ultima_version_subtitulos.ipynb
05_CrewIA+LangChain/: README.md
05_CrewIA+LangChain/src/olympic_games_bilingual_academic_research_system/: crew.py  main.py
05_CrewIA+LangChain/src/olympic_games_bilingual_academic_research_system/config/: agents.yaml  tasks.yaml
06_MCP/: .env.example  .gitignore  README.md  requirements.txt
06_MCP/agents/: agente_langgraph.py
06_MCP/data/: noc_regions.csv
06_MCP/mcp_server/: server.py
06_MCP/server/: app_ui.py  main.py  server_web.py
06_MCP/tools/: external_mcp.py  llm_analysis.py  medals_api.py
CrewIA+LangChain/: pyproject.toml
CrewIA+LangChain/src/olympic_games_bilingual_academic_research_system/: crew.py
Sistema de Agentes Colaborativos/: Untitled6.ipynb
(+2 files in other folders)
